--- a/index.html
+++ b/index.html
@@ -1,11 +1,44 @@
 <!DOCTYPE html>
 
 <html>
+
   <head>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="styles.css">
   </head>
 
   <body>
+    <section>
+      <header>
+        <h1>The VC Experience</h1>
+        <nav>
+          <ul>
+            <li>
+              <a>
+                Mission Statement
+              </a>
+            </li>
+            <li>
+              <a>
+                Portfolio
+              </a>
+            </li>
+          </li>
+          <li>
+            <a>
+              Investment Team
+            </a>
+          </li>
+          </ul>
+        </nav>
+      </header>
+    </section>
+    <section>
+      <div>
+        <h2>The VC Experience</h2>
+        <h3>Our fund is committed to the furthering entrepreneurs in the mobility sector.</h3>
+      </div>
+    </section>
     
   </body>
 </html>
