--- a/index.html
+++ b/index.html
@@ -4,28 +4,29 @@
 
   <head>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <title>The VC Experience</title>
     <link rel="stylesheet" href="styles.css">
   </head>
 
   <body>
     <section>
-      <header>
+      <header class="header">
         <h1>The VC Experience</h1>
         <nav>
-          <ul>
+          <ul class="nav-links">
             <li>
-              <a>
+              <a href="#">
                 Mission Statement
               </a>
             </li>
             <li>
-              <a>
+              <a href="#">
                 Portfolio
               </a>
             </li>
           </li>
           <li>
-            <a>
+            <a href="#">
               Investment Team
             </a>
           </li>
@@ -33,11 +34,74 @@
         </nav>
       </header>
     </section>
-    <section>
+    <section class="hero">
       <div>
         <h2>The VC Experience</h2>
-        <h3>Our fund is committed to the furthering entrepreneurs in the mobility sector.</h3>
+        <p>Our fund is committed to the furthering entrepreneurs in the mobility sector.</p>
       </div>
+    </section>
+
+    <section class="portfolio">
+      <div>
+        <h2>Our Mobility Portfolio</h2>
+        <p>Impacting diverse secors of mobility to better the human experience and the world we inhabit</p>
+      </div>
+      <div class="portfolio-grid">
+        <div class="portfolio-item">
+          <img src="images/aeroargonauts.jpg" alt="AeroArgonaut">
+          <h3>AeroArgonauts</h3>
+        </div>
+        <div class="portfolio-item">
+          <img src="images/autobueno.jpg" alt="AutoBueno">
+          <h3>AeroArgonauts</h3>
+        </div>
+        <div class="portfolio-item">
+          <img src="images/lanechatter.jpg" alt="LaneChatter">
+          <h3>LaneChatter</h3>
+        </div>
+        <div class="portfolio-item">
+          <img src="images/tigertreads.jpg" alt="TigerTreads">
+          <h3>TigerTreads</h3>
+        </div>
+        <div class="portfolio-item">
+          <img src="images/valettoday.jpg" alt="ValetToday">
+          <h3>ValetToday</h3>
+        </div>
+
+      </div>
+    </section>
+
+    <section class="team">
+      <h2>Our Team</h2>
+      <div>
+        <div class="team-member">
+          <img src="#" alt="LisaFischer">
+          <h2>Lisa Fischer</h2>
+          <p>C.E.O - Founder and Principal Investor</p>
+        </div>
+        <div class="team-member">
+          <img src="#" alt="AlexLasker">
+          <h2>Alex Lasker</h2>
+          <p>Partner - Research & Development</p>
+        </div>
+        <div class="team-member">
+          <img src="#" alt="OmarCarlsen">
+          <h2>Omar Carlsenr</h2>
+          <p>Partner - Partnerships & Marketing</p>
+        </div>
+      </div>
+    </section>
+    <section class="footer">
+      <footer>
+        <h2>The VC Experience</h2>
+        <div>
+          <h3>introduction@vcexperience.investors</h3>
+        <h3>555-867-5309</h3>
+        </div>
+        <h3>copyright VC Enterprises 2020</h3>
+
+        
+      </footer>
     </section>
     
   </body>
