--- a/index.html
+++ b/index.html
@@ -1,108 +1,91 @@
 <!DOCTYPE html>
-
 <html>
-
   <head>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <title>The VC Experience</title>
+    <title>Blue Wave Swim School</title>
     <link rel="stylesheet" href="styles.css">
   </head>
 
   <body>
     <section>
       <header class="header">
-        <h1>The VC Experience</h1>
+        <h1>Blue Wave Swim School</h1>
         <nav>
           <ul class="nav-links">
-            <li>
-              <a href="#">
-                Mission Statement
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                Portfolio
-              </a>
-            </li>
-          </li>
-          <li>
-            <a href="#">
-              Investment Team
-            </a>
-          </li>
+            <li><a href="#">Mission Statement</a></li>
+            <li><a href="#">Programs</a></li>
+            <li><a href="#">Meet the Coaches</a></li>
           </ul>
         </nav>
       </header>
     </section>
+
     <section class="hero">
       <div>
-        <h2>The VC Experience</h2>
-        <p>Our fund is committed to the furthering entrepreneurs in the mobility sector.</p>
+        <h2>Blue Wave Swim School</h2>
+        <p>Dedicated to building confident swimmers through fun, safe, and effective instruction.</p>
       </div>
     </section>
 
     <section class="portfolio">
       <div>
-        <h2>Our Mobility Portfolio</h2>
-        <p>Impacting diverse secors of mobility to better the human experience and the world we inhabit</p>
+        <h2>Our Swim Programs</h2>
+        <p>Empowering swimmers of all ages — from first splash to advanced stroke techniques.</p>
       </div>
       <div class="portfolio-grid">
         <div class="portfolio-item">
-          <img src="images/aeroargonauts.jpg" alt="AeroArgonaut">
-          <h3>AeroArgonauts</h3>
+          <img src="images/baby-swim.jpg" alt="Baby & Toddler Lessons">
+          <h3>Baby & Toddler Lessons</h3>
         </div>
         <div class="portfolio-item">
-          <img src="images/autobueno.jpg" alt="AutoBueno">
-          <h3>AeroArgonauts</h3>
+          <img src="images/kids-swim.jpg" alt="Kids Learn-to-Swim">
+          <h3>Kids Learn-to-Swim</h3>
         </div>
         <div class="portfolio-item">
-          <img src="images/lanechatter.jpg" alt="LaneChatter">
-          <h3>LaneChatter</h3>
+          <img src="images/adult-swim.jpg" alt="Adult Lessons">
+          <h3>Adult Lessons</h3>
         </div>
         <div class="portfolio-item">
-          <img src="images/tigertreads.jpg" alt="TigerTreads">
-          <h3>TigerTreads</h3>
+          <img src="images/private-coaching.jpg" alt="Private Coaching">
+          <h3>Private Coaching</h3>
         </div>
         <div class="portfolio-item">
-          <img src="images/valettoday.jpg" alt="ValetToday">
-          <h3>ValetToday</h3>
+          <img src="images/lifeguard-training.jpg" alt="Lifeguard Training">
+          <h3>Lifeguard Training</h3>
         </div>
-
       </div>
     </section>
 
     <section class="team">
-      <h2>Our Team</h2>
+      <h2>Meet Our Coaches</h2>
       <div>
         <div class="team-member">
-          <img src="#" alt="LisaFischer">
-          <h2>Lisa Fischer</h2>
-          <p>C.E.O - Founder and Principal Investor</p>
+          <img src="images/coach1.jpg" alt="Coach Lisa">
+          <h2>Coach Lisa</h2>
+          <p>Head Instructor - 15 years experience, Red Cross Certified</p>
         </div>
         <div class="team-member">
-          <img src="#" alt="AlexLasker">
-          <h2>Alex Lasker</h2>
-          <p>Partner - Research & Development</p>
+          <img src="images/coach2.jpg" alt="Coach Alex">
+          <h2>Coach Alex</h2>
+          <p>Assistant Coach - Former Collegiate Swimmer</p>
         </div>
         <div class="team-member">
-          <img src="#" alt="OmarCarlsen">
-          <h2>Omar Carlsenr</h2>
-          <p>Partner - Partnerships & Marketing</p>
+          <img src="images/coach3.jpg" alt="Coach Omar">
+          <h2>Coach Omar</h2>
+          <p>Technique Coach - Water Safety Specialist</p>
         </div>
       </div>
     </section>
+
     <section class="footer">
       <footer>
-        <h2>The VC Experience</h2>
+        <h2>Blue Wave Swim School</h2>
         <div>
-          <h3>introduction@vcexperience.investors</h3>
-        <h3>555-867-5309</h3>
+          <h3>info@bluewaveswimschool.com</h3>
+          <h3>555-867-5309</h3>
         </div>
-        <h3>copyright VC Enterprises 2020</h3>
-
-        
+        <h3>&copy; Blue Wave Swim School 2025</h3>
       </footer>
     </section>
-    
   </body>
 </html>
