added images, and proper image paths, added some styling boarders, added styling for header body, and the entire page.

--- a/index.html
+++ b/index.html
@@ -27,55 +27,45 @@
       </div>
     </section>
 
-    <section class="portfolio">
-      <div>
-        <h2>Our Swim Programs</h2>
-        <p>Empowering swimmers of all ages — from first splash to advanced stroke techniques.</p>
-      </div>
-      <div class="portfolio-grid">
-        <div class="portfolio-item">
-          <img src="images/baby-swim.jpg" alt="Baby & Toddler Lessons">
-          <h3>Baby & Toddler Lessons</h3>
-        </div>
-        <div class="portfolio-item">
-          <img src="images/kids-swim.jpg" alt="Kids Learn-to-Swim">
-          <h3>Kids Learn-to-Swim</h3>
-        </div>
-        <div class="portfolio-item">
-          <img src="images/adult-swim.jpg" alt="Adult Lessons">
-          <h3>Adult Lessons</h3>
-        </div>
-        <div class="portfolio-item">
-          <img src="images/private-coaching.jpg" alt="Private Coaching">
-          <h3>Private Coaching</h3>
-        </div>
-        <div class="portfolio-item">
-          <img src="images/lifeguard-training.jpg" alt="Lifeguard Training">
-          <h3>Lifeguard Training</h3>
-        </div>
-      </div>
-    </section>
+    <!-- Corrected Program Grid -->
+<div class="portfolio-item">
+  <img src="images/babiesswimming.jpg" alt="Baby & Toddler Lessons">
+  <h3>Baby & Toddler Lessons</h3>
+</div>
+<div class="portfolio-item">
+  <img src="images/kidsswimteam.jpg" alt="Kids Learn-to-Swim">
+  <h3>Kids Learn-to-Swim</h3>
+</div>
+<div class="portfolio-item">
+  <img src="images/adultswimteam.jpg" alt="Adult Lessons">
+  <h3>Adult Lessons</h3>
+</div>
+<div class="portfolio-item">
+  <img src="images/coaching.jpg" alt="Private Coaching">
+  <h3>Private Coaching</h3>
+</div>
+<div class="portfolio-item">
+  <img src="images/lifeguard.jpg" alt="Lifeguard Training">
+  <h3>Lifeguard Training</h3>
+</div>
 
-    <section class="team">
-      <h2>Meet Our Coaches</h2>
-      <div>
-        <div class="team-member">
-          <img src="images/coach1.jpg" alt="Coach Lisa">
-          <h2>Coach Lisa</h2>
-          <p>Head Instructor - 15 years experience, Red Cross Certified</p>
-        </div>
-        <div class="team-member">
-          <img src="images/coach2.jpg" alt="Coach Alex">
-          <h2>Coach Alex</h2>
-          <p>Assistant Coach - Former Collegiate Swimmer</p>
-        </div>
-        <div class="team-member">
-          <img src="images/coach3.jpg" alt="Coach Omar">
-          <h2>Coach Omar</h2>
-          <p>Technique Coach - Water Safety Specialist</p>
-        </div>
-      </div>
-    </section>
+<!-- Coaches -->
+<div class="team-member">
+  <img src="images/coachlisa.jpg" alt="Coach Lisa">
+  <h2>Coach Lisa</h2>
+  <p>Head Instructor - 15 years experience, Red Cross Certified</p>
+</div>
+<div class="team-member">
+  <img src="images/coachalex.jpg" alt="Coach Alex">
+  <h2>Coach Alex</h2>
+  <p>Assistant Coach - Former Collegiate Swimmer</p>
+</div>
+<div class="team-member">
+  <img src="images/coachomar.jpg" alt="Coach Omar">
+  <h2>Coach Omar</h2>
+  <p>Technique Coach - Water Safety Specialist</p>
+</div>
+
 
     <section class="footer">
       <footer>
