--- a/index.html
+++ b/index.html
@@ -27,44 +27,62 @@
       </div>
     </section>
 
-    <!-- Corrected Program Grid -->
-<div class="portfolio-item">
-  <img src="images/babiesswimming.jpg" alt="Baby & Toddler Lessons">
-  <h3>Baby & Toddler Lessons</h3>
-</div>
-<div class="portfolio-item">
-  <img src="images/kidsswimteam.jpg" alt="Kids Learn-to-Swim">
-  <h3>Kids Learn-to-Swim</h3>
-</div>
-<div class="portfolio-item">
-  <img src="images/adultswimteam.jpg" alt="Adult Lessons">
-  <h3>Adult Lessons</h3>
-</div>
-<div class="portfolio-item">
-  <img src="images/coaching.jpg" alt="Private Coaching">
-  <h3>Private Coaching</h3>
-</div>
-<div class="portfolio-item">
-  <img src="images/lifeguard.jpg" alt="Lifeguard Training">
-  <h3>Lifeguard Training</h3>
-</div>
+ <!-- ... existing nav + hero ... -->
 
-<!-- Coaches -->
-<div class="team-member">
-  <img src="images/coachlisa.jpg" alt="Coach Lisa">
-  <h2>Coach Lisa</h2>
-  <p>Head Instructor - 15 years experience, Red Cross Certified</p>
-</div>
-<div class="team-member">
-  <img src="images/coachalex.jpg" alt="Coach Alex">
-  <h2>Coach Alex</h2>
-  <p>Assistant Coach - Former Collegiate Swimmer</p>
-</div>
-<div class="team-member">
-  <img src="images/coachomar.jpg" alt="Coach Omar">
-  <h2>Coach Omar</h2>
-  <p>Technique Coach - Water Safety Specialist</p>
-</div>
+<!-- CLASS SECTION -->
+<section class="portfolio">
+  <div>
+    <h2>Our Classes</h2>
+    <p>Empowering swimmers of all ages — from first splash to advanced stroke techniques.</p>
+  </div>
+
+  <div class="portfolio-grid">
+    <div class="portfolio-item">
+      <img src="images/babiesswimming.jpg" alt="Baby & Toddler Lessons">
+      <h3>Baby & Toddler Lessons</h3>
+    </div>
+    <div class="portfolio-item">
+      <img src="images/kidsswimteam.jpg" alt="Kids Learn-to-Swim">
+      <h3>Kids Learn-to-Swim</h3>
+    </div>
+    <div class="portfolio-item">
+      <img src="images/adultswimteam.jpg" alt="Adult Lessons">
+      <h3>Adult Lessons</h3>
+    </div>
+    <div class="portfolio-item">
+      <img src="images/coaching.jpg" alt="Private Coaching">
+      <h3>Private Coaching</h3>
+    </div>
+    <div class="portfolio-item">
+      <img src="images/lifeguard.jpg" alt="Lifeguard Training">
+      <h3>Lifeguard Training</h3>
+    </div>
+  </div>
+</section>
+
+<!-- TEAM SECTION -->
+<section class="team">
+  <h2>Meet Our Team</h2>
+  <p>Our certified instructors bring years of experience, energy, and care to every lesson.</p>
+
+  <div>
+    <div class="team-member">
+      <img src="images/coachlisa.jpg" alt="Coach Lisa">
+      <h3>Coach Lisa</h3>
+      <p>Head Instructor - 15 years experience, Red Cross Certified</p>
+    </div>
+    <div class="team-member">
+      <img src="images/coachalex.jpg" alt="Coach Alex">
+      <h3>Coach Alex</h3>
+      <p>Assistant Coach - Former Collegiate Swimmer</p>
+    </div>
+    <div class="team-member">
+      <img src="images/coachomar.jpg" alt="Coach Omar">
+      <h3>Coach Omar</h3>
+      <p>Technique Coach - Water Safety Specialist</p>
+    </div>
+  </div>
+</section>
 
 
     <section class="footer">
